# django-ontology

./: README.md  Vagrantfile  pytest.ini  requirements.txt  setup.cfg
old/: requirements.txt
old/entity/: settings.py  urls.py
old/entity/core/: admin.py  apps.py  models.py  urls.py  views.py
old/entity/core/migrations/: 0001_initial.py  0002_dummy.py  0003_tag_alter_entity_options_alter_dummy_entity_and_more.py  0004_alter_entitym2mtag_table.py  0005_alter_entitym2mtag_entity_alter_entitym2mtag_tag_and_more.py  0006_alter_dummy_options_remove_comment_parent_and_more.py  0007_alter_comment_options_alter_comment_reply_to_and_more.py
old/templates/: _base.html  comment.html  comment_thread.html
ontology/: admin.py  apps.py  indirect_inline.py  models.py  signals.py  tests.py  views.py
ontology/migrations/: 0001_initial.py  0002_alter_attribute_domain.py  0002_alter_domain_entities_domain_and_more.py
ontology_auth/: admin.py  apps.py  backends.py  models.py  signals.py
ontology_auth/migrations/: 0001_initial.py
testproject/: settings.py
testproject/testapp/: admin.py  apps.py  models.py  tests.py
testproject/testapp/migrations/: 0001_initial.py
