[metadata]
name = django-ontology
version = 0.1.1
description = "ContentTypes on steroids": adds graph analytics, attribute tagging, comments, security policies, etc.
long_description = file: README.md
url = https://github.com/pphysch/django-ontology
author = Paul Fischer
author_email = pphysch@pm.me
license = GNU GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = ontology, ontology.migrations, ontology_auth, ontology_auth.migrations
python_requires = >=3.9
install_requires =
    Django >= 4.0
    NetworkX